[package]
name = "mrflagly"
version = "0.2.7"
edition = "2021"
license = "MIT"
description = "No nonsense feature flagging system"
homepage = "https://github.com/vangheem/mr.flagly"
repository = "https://github.com/vangheem/mr.flagly"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mrflagly"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
httptest = "0.15.4"
json = "0.12.4"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
ureq = "2.6.2"
