[package]
name = "mrflagly"
version = "0.2.12"
edition = "2024"
license = "MIT"
description = "No nonsense feature flagging system"
homepage = "https://github.com/vangheem/mr.flagly"
repository = "https://github.com/vangheem/mr.flagly"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mrflagly"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
httptest = "0.15.4"
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py310"], optional = true }
serde_json = "1.0.128"
ureq = "2.6.2"

[features]
default = ["python"]
python = ["dep:pyo3"]
