[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "mrflagly"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# license = "MIT"
readme = "README.md"
description = "No nonsense feature flagging system"
repository = "https://github.com/vangheem/mr.flagly"
homepage = "https://github.com/vangheem/mr.flagly"
authors = [
    {name = "Nathan Van Gheem", email = "vangheem@gmail.com>"},
]
